postcss/testData/inspections/customPropertiesSet/incorrectCustomPropertiesSetName.pcss
@apply <error descr="Custom properties set name should start with '--'">-my</error>;